src/gen/pelican/PelicanParser.java
// Generated from D:/IdeaProjects/Crone/src/main/kotlin/pelican\PelicanParser.g4 by ANTLR 4.9
package pelican;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PelicanParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SINGLE_LINE_DOC_COMMENT=1, EMPTY_DELIMITED_DOC_COMMENT=2, DELIMITED_DOC_COMMENT=3, 
		SINGLE_LINE_COMMENT=4, DELIMITED_COMMENT=5, WHITESPACES=6, BOOL=7, BREAK=8, 
		BYTE=9, CHAR=10, CLASS=11, CONTINUE=12, CONST=13, DO=14, DOUBLE=15, ELSE=16, 
		ENUM=17, EXTERN=18, FALSE_=19, FLOAT=20, FOR=21, FOREACH=22, FUNCTION=23, 
		GOTO=24, IF=25, INT=26, INTERFACE=27, INTERNAL=28, LONG=29, NEW=30, NULL=31, 
		PRIVATE=32, PROPERTY=33, PROTECTED=34, PUBLIC=35, RETURN=36, SBYTE=37, 
		SHORT=38, SIZEOF=39, STATIC=40, STRUCT=41, SWITCH=42, THIS=43, TRUE_=44, 
		TYPENAME=45, UINT=46, ULONG=47, UNION=48, USHORT=49, VAR=50, VARARG=51, 
		VOID=52, WHILE=53, ID=54, LITERAL_ACCES=55, INTEGER_LITERAL=56, HEX_INTEGER_LITERAL=57, 
		BIN_INTEGER_LITERAL=58, REAL_LITERAL=59, CHARACTER_LITERAL=60, REGULAR_STRING=61, 
		OPEN_BRACE=62, CLOSE_BRACE=63, OPEN_BRACKET=64, CLOSE_BRACKET=65, OPEN_PAREN=66, 
		CLOSE_PAREN=67, DOT=68, COMMA=69, COLON=70, SEMI=71, PLUS=72, MINUS=73, 
		STAR=74, SLASH=75, PERCENT=76, AMP=77, OR=78, CARET=79, BANG=80, TILDE=81, 
		ASSIGN=82, LT=83, GT=84, BIG_ARROW=85, QUESTION=86, DOUBLE_COLON=87, OP_COALESCING=88, 
		OP_INC=89, OP_DEC=90, OP_AND=91, OP_OR=92, OP_ARROW=93, OP_EQ=94, OP_NE=95, 
		OP_IDENTITY=96, OP_NIDENTITY=97, OP_LTE=98, OP_GTE=99, OP_PLUS_ASSIGN=100, 
		OP_MINUS_ASSIGN=101, OP_TIMES_ASSIGN=102, OP_DIV_ASSIGN=103, OP_REM_ASSIGN=104, 
		OP_AND_ASSIGN=105, OP_XOR_ASSIGN=106, OP_OR_ASSIGN=107, OP_SHL_ASSIGN=108, 
		OP_SHR_ASSIGN=109, OP_COALESCING_ASSIGN=110, OP_RANGE=111, OP_SPREAD=112;
	public static final int
		RULE_translation_unit = 0, RULE_expression = 1, RULE_basic_expression = 2, 
		RULE_literal_expression = 3, RULE_integer_literal = 4, RULE_lambda_expression = 5, 
		RULE_postfix_expression = 6, RULE_invocation_expression = 7, RULE_indexing_expression = 8, 
		RULE_prefix_expression = 9, RULE_sizeof_expression = 10, RULE_product_expression = 11, 
		RULE_sum_expression = 12, RULE_shift_expression = 13, RULE_compare_expression = 14, 
		RULE_equality_expression = 15, RULE_identity_expression = 16, RULE_bit_and_expression = 17, 
		RULE_bit_xor_expression = 18, RULE_bit_or_expression = 19, RULE_logical_and_expression = 20, 
		RULE_logical_or_expression = 21, RULE_coalescing_expression = 22, RULE_assignment_expression = 23, 
		RULE_conditional_expression = 24, RULE_sequence_expression = 25, RULE_variable = 26, 
		RULE_arg_list = 27, RULE_argument = 28, RULE_statement_seq = 29, RULE_statement = 30, 
		RULE_function_invocation_statement = 31, RULE_expression_statement = 32, 
		RULE_compound_statement = 33, RULE_control_flow_statement = 34, RULE_labeled_statement = 35, 
		RULE_label_name = 36, RULE_conditional_statement = 37, RULE_if_statement = 38, 
		RULE_switch_statement = 39, RULE_switch_body = 40, RULE_switch_case = 41, 
		RULE_loop_statement = 42, RULE_while_statement = 43, RULE_do_while_statement = 44, 
		RULE_for_statement = 45, RULE_for_every_statement = 46, RULE_foreach_statement = 47, 
		RULE_condition = 48, RULE_declaration_seq = 49, RULE_declaration = 50, 
		RULE_function_declaration = 51, RULE_abstract_function_declaration = 52, 
		RULE_function_name = 53, RULE_function_parameter_list = 54, RULE_function_parameter = 55, 
		RULE_function_parameter_name = 56, RULE_function_body = 57, RULE_var_declaration = 58, 
		RULE_simple_var_declaration = 59, RULE_var_name = 60, RULE_destructed_var_name = 61, 
		RULE_destructed_var_name_list = 62, RULE_var_initializer = 63, RULE_initializer_list = 64, 
		RULE_container_declaration = 65, RULE_container_head = 66, RULE_container_name = 67, 
		RULE_container_body = 68, RULE_container_field_list = 69, RULE_container_field = 70, 
		RULE_container_method_list = 71, RULE_container_implementation = 72, RULE_enum_declaration = 73, 
		RULE_enum_name = 74, RULE_enum_entry_list = 75, RULE_enum_entry = 76, 
		RULE_interface_declaration = 77, RULE_interface_method_list = 78, RULE_interface_name = 79, 
		RULE_type_specifier = 80, RULE_type_modifiers = 81, RULE_type = 82, RULE_tupel_type = 83, 
		RULE_tupel_type_list = 84, RULE_templated_type = 85, RULE_type_name = 86, 
		RULE_visibility_modifier = 87, RULE_extern = 88, RULE_const_ = 89, RULE_static_ = 90, 
		RULE_builtin_type = 91, RULE_container_type = 92, RULE_pointer = 93, RULE_template_specifier = 94, 
		RULE_template_type_list = 95, RULE_template_type = 96, RULE_template_kind = 97, 
		RULE_template_name = 98, RULE_actual_template_types = 99, RULE_actual_template_type_list = 100;
	private static String[] makeRuleNames() {
		return new String[] {
			"translation_unit", "expression", "basic_expression", "literal_expression", 
			"integer_literal", "lambda_expression", "postfix_expression", "invocation_expression", 
			"indexing_expression", "prefix_expression", "sizeof_expression", "product_expression", 
			"sum_expression", "shift_expression", "compare_expression", "equality_expression", 
			"identity_expression", "bit_and_expression", "bit_xor_expression", "bit_or_expression", 
			"logical_and_expression", "logical_or_expression", "coalescing_expression", 
			"assignment_expression", "conditional_expression", "sequence_expression", 
			"variable", "arg_list", "argument", "statement_seq", "statement", "function_invocation_statement", 
			"expression_statement", "compound_statement", "control_flow_statement", 
			"labeled_statement", "label_name", "conditional_statement", "if_statement", 
			"switch_statement", "switch_body", "switch_case", "loop_statement", "while_statement", 
			"do_while_statement", "for_statement", "for_every_statement", "foreach_statement", 
			"condition", "declaration_seq", "declaration", "function_declaration", 
			"abstract_function_declaration", "function_name", "function_parameter_list", 
			"function_parameter", "function_parameter_name", "function_body", "var_declaration", 
			"simple_var_declaration", "var_name", "destructed_var_name", "destructed_var_name_list", 
			"var_initializer", "initializer_list", "container_declaration", "container_head", 
			"container_name", "container_body", "container_field_list", "container_field", 
			"container_method_list", "container_implementation", "enum_declaration", 
			"enum_name", "enum_entry_list", "enum_entry", "interface_declaration", 
			"interface_method_list", "interface_name", "type_specifier", "type_modifiers", 
			"type", "tupel_type", "tupel_type_list", "templated_type", "type_name", 
			"visibility_modifier", "extern", "const_", "static_", "builtin_type", 
			"container_type", "pointer", "template_specifier", "template_type_list", 
			"template_type", "template_kind", "template_name", "actual_template_types", 
			"actual_template_type_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'/***/'", null, null, null, null, "'bool'", "'break'", "'byte'", 
			"'char'", "'class'", "'continue'", "'const'", "'do'", "'double'", "'else'", 
			"'enum'", "'extern'", "'false'", "'float'", "'for'", "'forEach'", "'function'", 
			"'goto'", "'if'", "'int'", "'interface'", "'internal'", "'long'", "'new'", 
			"'null'", "'private'", "'property'", "'protected'", "'public'", "'return'", 
			"'sbyte'", "'short'", "'sizeof'", "'static'", "'struct'", "'switch'", 
			"'this'", "'true'", "'typename'", "'uint'", "'ulong'", "'union'", "'ushort'", 
			"'var'", "'vararg'", "'void'", "'while'", null, null, null, null, null, 
			null, null, null, "'{'", "'}'", "'['", "']'", "'('", "')'", "'.'", "','", 
			"':'", "';'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'", 
			"'!'", "'~'", "'='", "'<'", "'>'", "'=>'", "'?'", "'::'", "'??'", "'++'", 
			"'--'", "'&&'", "'||'", "'->'", "'=='", "'!='", "'==='", "'!=='", "'<='", 
			"'>='", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'^='", "'|='", 
			"'<<='", "'>>='", "'??='", "'..'", "'...'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SINGLE_LINE_DOC_COMMENT", "EMPTY_DELIMITED_DOC_COMMENT", "DELIMITED_DOC_COMMENT", 
			"SINGLE_LINE_COMMENT", "DELIMITED_COMMENT", "WHITESPACES", "BOOL", "BREAK", 
			"BYTE", "CHAR", "CLASS", "CONTINUE", "CONST", "DO", "DOUBLE", "ELSE", 
			"ENUM", "EXTERN", "FALSE_", "FLOAT", "FOR", "FOREACH", "FUNCTION", "GOTO", 
			"IF", "INT", "INTERFACE", "INTERNAL", "LONG", "NEW", "NULL", "PRIVATE", 
			"PROPERTY", "PROTECTED", "PUBLIC", "RETURN", "SBYTE", "SHORT", "SIZEOF", 
			"STATIC", "STRUCT", "SWITCH", "THIS", "TRUE_", "TYPENAME", "UINT", "ULONG", 
			"UNION", "USHORT", "VAR", "VARARG", "VOID", "WHILE", "ID", "LITERAL_ACCES", 
			"INTEGER_LITERAL", "HEX_INTEGER_LITERAL", "BIN_INTEGER_LITERAL", "REAL_LITERAL", 
			"CHARACTER_LITERAL", "REGULAR_STRING", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "OPEN_PAREN", "CLOSE_PAREN", "DOT", "COMMA", "COLON", 
			"SEMI", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "AMP", "OR", "CARET", 
			"BANG", "TILDE", "ASSIGN", "LT", "GT", "BIG_ARROW", "QUESTION", "DOUBLE_COLON", 
			"OP_COALESCING", "OP_INC", "OP_DEC", "OP_AND", "OP_OR", "OP_ARROW", "OP_EQ", 
			"OP_NE", "OP_IDENTITY", "OP_NIDENTITY", "OP_LTE", "OP_GTE", "OP_PLUS_ASSIGN", 
			"OP_MINUS_ASSIGN", "OP_TIMES_ASSIGN", "OP_DIV_ASSIGN", "OP_REM_ASSIGN", 
			"OP_AND_ASSIGN", "OP_XOR_ASSIGN", "OP_OR_ASSIGN", "OP_SHL_ASSIGN", "OP_SHR_ASSIGN", 
			"OP_COALESCING_ASSIGN", "OP_RANGE", "OP_SPREAD"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PelicanParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PelicanParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Translation_unitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PelicanParser.EOF, 0); }
		public Declaration_seqContext declaration_seq() {
			return getRuleContext(Declaration_seqContext.class,0);
		}
		public Translation_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translation_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PelicanParserListener ) ((PelicanParserListener)listener).enterTranslation_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PelicanParserListener ) ((PelicanParserListener)listener).exitTranslation_unit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PelicanParserVisitor ) return ((PelicanParserVisitor<? extends T>)visitor).visitTranslation_unit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Translation_unitContext translation_unit() throws RecognitionException {
		Translation_unitContext _localctx = new Translation_unitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translation_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << BYTE) | (1L << CHAR) | (1L << CONST) | (1L << DOUBLE) | (1L << ENUM) | (1L << EXTERN) | (1L << FLOAT) | (1L << FUNCTION) | (1L << INT) | (1L << INTERFACE) | (1L << INTERNAL) | (1L << LONG) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << SBYTE) | (1L << SHORT) | (1L << STATIC) | (1L << STRUCT) | (1L << UINT) | (1L << ULONG) | (1L << UNION) | (1L << USHORT) | (1L << VAR) | (1L << VOID) | (1L << ID))) != 0) || _la==OPEN_PAREN || _la==LT) {
				{
				setState(202);
				declaration_seq();
				}
			}

			setState(205);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Basic_expressionContext basic_expression() {
			return getRuleContext(Basic_expressionContext.class,0);
		}
		public Assignment_expressionContext assignment_expression() {
			return getRuleContext(Assignment_expressionContext.class,0);
		}
		public Invocation_expressionContext invocation_expression() {
			return getRuleContext(Invocation_expressionContext.class,0);
		}
		public Sequence_expressionContext sequence_expression() {
			return getRuleContext(Sequence_expressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PelicanParserListener ) ((PelicanParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PelicanParserListener ) ((PelicanParserListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PelicanParserVisitor ) return ((PelicanParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(211);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(207);
				basic_expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(208);
				assignment_expression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(209);
				invocation_expression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(210);
				sequence_expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Basic_expressionContext extends ParserRuleContext {
		public TerminalNode OPEN_PAREN() { return getToken(PelicanParser.OPEN_PAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CLOSE_PAREN() { return getToken(PelicanParser.CLOSE_PAREN, 0); }
		public Literal_expressionContext literal_expression() {
			return getRuleContext(Literal_expressionContext.class,0);
		}
		public Lambda_expressionContext lambda_expression() {
			return getRuleContext(Lambda_expressionContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode THIS() { return getToken(PelicanParser.THIS, 0); }
		public Basic_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basic_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PelicanParserListener ) ((PelicanParserListener)listener).enterBasic_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PelicanParserListener ) ((PelicanParserListener)listener).exitBasic_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PelicanParserVisitor ) return ((PelicanParserVisitor<? extends T>)visitor).visitBasic_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Basic_expressionContext basic_expression() throws RecognitionException {
		Basic_expressionContext _localctx = new Basic_expressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_basic_expression);
		try {
			setState(221);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(213);
				match(OPEN_PAREN);
				setState(214);
				expression();
				setState(215);
				match(CLOSE_PAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(217);
				literal_expression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(218);
				lambda_expression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(219);
				variable();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(220);
				match(THIS);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Literal_expressionContext extends ParserRuleContext {
		public Integer_literalContext integer_literal() {
			return getRuleContext(Integer_literalContext.class,0);
		}
		public TerminalNode REAL_LITERAL() { return getToken(PelicanParser.REAL_LITERAL, 0); }
		public TerminalNode CHARACTER_LITERAL() { return getToken(PelicanParser.CHARACTER_LITERAL, 0); }
		public TerminalNode REGULAR_STRING() { return getToken(PelicanParser.REGULAR_STRING, 0); }
		public TerminalNode TRUE_() { return getToken(PelicanParser.TRUE_, 0); }
		public TerminalNode FALSE_() { return getToken(PelicanParser.FALSE_, 0); }
		public TerminalNode NULL() { return getToken(PelicanParser.NULL, 0); }
		public Literal_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PelicanParserListener ) ((PelicanParserListener)listener).enterLiteral_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PelicanParserListener ) ((PelicanParserListener)listener).exitLiteral_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PelicanParserVisitor ) return ((PelicanParserVisitor<? extends T>)visitor).visitLiteral_expression(this);
			else return visitor.visitChildren(this);
		}
	}
